--- a/sites/all/themes/tm/sass/_forms.scss
+++ b/sites/all/themes/tm/sass/_forms.scss
@@ -1,3 +1,10 @@
+input::-moz-focus-inner { 
+  border: 0; 
+  padding: 0; 
+  margin-top:-2px; 
+  margin-bottom: -2px; 
+}
+
 .form-item {
   margin: 0 0 1rem 0;
 }
